# Pet-Store

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
migrations/2022-12-11-150421_create_pets/: down.sql  up.sql
proto/: svc.proto
src/: lib.rs  model.rs  schema.rs
src/dao/: mod.rs  model.rs  query.rs  schema.rs
src/svc/: mod.rs  service.rs
