[package]
name = "pet-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = "*"
tonic-reflection = "*"
prost = "*"
prost-types = "*"
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
tokio-stream = "*"

[build-dependencies]
tonic-build = "*"
